css/style.css
/* ... */
/* ---------- Story images resizing ---------- */
@media all and (min-width: 601px) {
	#stories .column .r50 {
		/*  scale to 50% and float to right  */
		max-width: 50%;
		float: right;
	}

	#stories .column .r75 {
		/*  scale to 75% and float to right  */
		max-width: 75%;
		float: right;
	}

	#stories .column .l50 {
		/*  scale to 50% and float to left  */
		max-width: 50%;
		float: left;
	}

	#stories .column .l75 {
		/*  scale to 75% and float to left  */
		max-width: 75%;
		float: left;
	}

	#stories .column .right50 {
		/*  scale to 50% and float to right  */
		max-width: 50%;
		float: right;
	}

	#stories .column .right75 {
		/*  scale to 75% and float to right  */
		max-width: 75%;
		float: right;
	}

	#stories .column .left50 {
		/*  scale to 50% and float to left  */
		max-width: 50%;
		float: left;
	}

	#stories .column .left75 {
		/*  scale to 75% and float to left  */
		max-width: 75%;
		float: left;
	}
}

/**** TablePress ****/
.dataTables_length,
.dataTables_filter {
	margin-bottom: 1em;
}

.dataTables_wrapper label input {
	height: 25px;
	background: #ebe8de;
	border-radius: 0;
	border: 1px solid #cacaca;
	font-size: 1.5rem;
	color: #585858;
}

.dataTables_wrapper label input,
.dataTables_wrapper label select {
	height: 25px;
	font-size: .8rem;
}

table.tablepress thead tr th,
.tablepress tfoot th {
	font-size: 1.1rem;
	border-bottom: 1px solid #e5e5e5;
	background: transparent;
}

.tablepress tfoot th {
	font-size: 1rem;
	color: #585858;
}

.tablepress .sorting:hover,
.tablepress .sorting_asc,
.tablepress .sorting_desc {
	color: black;
	background: #f7f7f7;
}

.dataTables_paginate a,
.paging_simple .paginate_button.next:after,
.paging_simple .paginate_button.previous:before {
	text-shadow: none;
	color: #4f868e !important;
	border: none;
}

.tablepress-table-description {
	margin: 2em 0;
}

#tablepress-1 .column-1 {
	padding: 1em 1.5em;
}

#tablepress-1 .column-2 {
	border-left: solid 1px #981e32;
	padding: 1em 1.5em;
}

#tablepress-1 {
	border-top: solid 1px #981e32;
}

/* Pulled in from Edit CSS */
.past-event {
	color: rgba(183,183,183,1.0) !important;
}

.story > header {
	display: none;
}

.article-author {
	display: none;
}

.blog h3,
.single-post h3 {
	font-size: 1.6rem;
	font-weight: 700;
}

/* Evidence page */
.drive-full-width #jacket #binder {
	max-width: none;
}

.archive-header {
	box-sizing: border-box;
    margin: 0 auto;
    max-width: 1188px;
    padding: 8rem 2rem 2rem;
}

.the-evidence .section-wrapper {
	margin: 0 auto;
	max-width: 1584px; /* Or whatever - this just happens to be the max width of the desktop header */
	min-height: 0;
}

.the-evidence .section-wrapper:nth-of-type(even) {
	background-color: #f3f3f3
}

.the-evidence .side-left .two {
	padding: 0 2rem 8rem;
}

.spine-full .the-evidence .side-left .two {
	padding-left: 4rem;
}

.spine-full .the-evidence .side-left.reverse .two {
	padding-right: 8rem;
}

.the-evidence .side-left .one {
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	padding-bottom: 50%;
}

.spine-mobile .fluid .the-evidence .row .column {
	float: none;
	width: 100%;
}

.spine-full .the-evidence .side-left .two {
	margin-left: 33%;
}

.spine-full .the-evidence .side-left .one {
	background-attachment: fixed;
	background-repeat: no-repeat;
	background-size: auto 100%;
	height: 100%;
	left: 0;
	position: absolute;
	width: 33%;
}

.spine-full .the-evidence section {
	margin: 0 auto;
	position: static;
}

.spine-full .the-evidence .side-left.reverse .two {
	float: left;
	margin-left: 0;
}

.spine-full .the-evidence .side-left.reverse .one {
	left: auto;
	right: 0;
}

.spine-full .the-evidence .side-left .one {
	background-position: calc(50% - (100vw / 3)) center;
}

.spine-full .the-evidence .side-left.reverse .one {
	background-position: calc(50% + (100vw / 3)) center;
}

.the-evidence blockquote {
	border-left: 1px solid #981e32;
	box-sizing: border-box;
	font-family: "proxima-nova", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
	line-height: 1.5em;
	margin: 1rem 2rem 2rem 2rem;
	padding: 0 0 0 1rem;
	position: relative;
	width: calc(100% - 4rem);
}

.spine-full .the-evidence blockquote {
	float: right;
	margin: 1rem -4rem 2rem 2rem;
	width: 50%;
}

.the-evidence blockquote p {
	color: #981e32;
	font-weight: 300;
}

.the-evidence blockquote p:last-child {
	color: #bcbcbc;
	font-size: 0.75em;
	font-style: italic;
	font-weight: 400;
}

@media screen and (min-width: 1189px) {
	.spine-full .fluid .the-evidence .side-left .one {
		/* Half of the section width minus 17 percent of the max width (since the other column is 67% wide) */
		width: calc(50% - (1188px * 0.17));
	}
}

@media screen and (min-width: 1585px) {
	.spine-full .the-evidence .side-left .one {
		background-position: calc(50% - (1584px / 3.19)) center;
	}

	.spine-full .the-evidence .side-left.reverse .one {
		background-position: calc(50% + (1584px / 3.19)) center;
	}
}

